lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-server-service
spec:
  selector:
    app: lab3-server
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
