lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
  - hosts:
    - app.frontend
    secretName: frontend-tls
  rules:
  - host: app.frontend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itdt-frontend-service
            port:
              number: 3000
